--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ footer{max-width:1200px;margin:0 auto;padding:32px 40px 48px;border-top:1px soli
     <a href="#how">How It Works</a>
     <a href="#compare">Compare</a>
     <a href="#telegram">Telegram</a>
-    <a href="https://docs.agentcanary.ai" target="_blank">Docs</a>
+    
     <a href="https://t.me/AgentCanary" target="_blank" class="nav-cta">Join Telegram</a>
   </div>
 </nav>
@@ -414,13 +414,13 @@ function handleNotify(){
   <p>Join Telegram. See the proof. Build when you're ready.</p>
   <div class="cta-btns">
     <a href="https://t.me/AgentCanary" class="btn-primary" target="_blank">Join Telegram</a>
-    <a href="https://docs.agentcanary.ai" class="btn-secondary" target="_blank">Read the Docs</a>
+    
   </div>
 </div>
 
 <footer>
   <div class="ft-left">AgentCanary · api.agentcanary.ai · 2026<span class="ft-disc">AgentCanary provides market data and intelligence for informational purposes only. Nothing on this site constitutes financial advice. Do your own research.</span></div>
-  <div class="ft-links"><a href="https://docs.agentcanary.ai" target="_blank">Docs</a><a href="#">ClawHub</a><a href="#">GitHub</a><a href="https://t.me/AgentCanary" target="_blank">Telegram</a><a href="#">X</a></div>
+  <div class="ft-links"><a href="#">ClawHub</a><a href="#">GitHub</a><a href="https://t.me/AgentCanary" target="_blank">Telegram</a><a href="#">X</a></div>
 </footer>
 
 </body>
