Update badge: soon on ClawHub

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ footer{max-width:1200px;margin:0 auto;padding:32px 40px 48px;border-top:1px soli
 <div class="hero">
   <div class="hero-grid"></div>
   <div class="hero-glow"></div>
-  <div class="hero-badge">Now on ClawHub — install the skill for free</div>
+  <div class="hero-badge">Soon on ClawHub</div>
   <h1>Market <em>intelligence</em> for ClawBot and&nbsp;AI&nbsp;agents</h1>
   <p class="hero-sub">Macro regime detection, risk scoring, trading signals, whale alerts, social sentiment, and AI market briefs — in a single API. Not raw data. Intelligence.</p>
   <div class="hero-actions">
