Update X handle to @agentcanaryHQ

--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@ function handleNotify(){
 
 <footer>
   <div class="ft-left">AgentCanary · api.agentcanary.ai · 2026<span class="ft-disc">AgentCanary provides market data and intelligence for informational purposes only. Nothing on this site constitutes financial advice. Do your own research.</span></div>
-  <div class="ft-links"><a href="https://clawhub.ai/MrCerq/agentcanary" target="_blank">ClawHub</a><a href="https://github.com/MrCerq" target="_blank">GitHub</a><a href="https://t.me/AgentCanary" target="_blank">Telegram</a><a href="https://x.com/AgentCanary" target="_blank">X</a></div>
+  <div class="ft-links"><a href="https://clawhub.ai/MrCerq/agentcanary" target="_blank">ClawHub</a><a href="https://github.com/MrCerq" target="_blank">GitHub</a><a href="https://t.me/AgentCanary" target="_blank">Telegram</a><a href="https://x.com/agentcanaryHQ" target="_blank">X</a></div>
 </footer>
 
 </body>
