SEO optimization: Add canonical tag, structured data, robots.txt, sitemap.xml, meta keywords

--- a/index.html
+++ b/index.html
@@ -5,16 +5,52 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>AgentCanary — Market Intelligence for AI Agents</title>
 <meta name="description" content="Macro regime detection, risk scoring, trading signals, whale alerts, social sentiment, and AI market briefs from 250+ sources. The only financial intelligence skill on ClawHub.">
+<meta name="keywords" content="AI trading signals, market intelligence API, ClawBot skills, macro regime detection, whale alerts, crypto intelligence, financial data API, trading automation, AI agents finance">
+<meta name="author" content="AgentCanary">
 <meta property="og:title" content="AgentCanary — Market Intelligence for AI Agents">
 <meta property="og:description" content="33 endpoints. 250+ data sources. 1,181 assets. The finance skill on ClawHub that can't steal from you.">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://agentcanary.ai">
+<link rel="canonical" href="https://agentcanary.ai/">
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="AgentCanary — Market Intelligence for AI Agents">
 <meta name="twitter:description" content="Macro regime detection, trading signals, social sentiment — for ClawBot and AI agents. Not raw data. Intelligence.">
 <link rel="icon" type="image/png" sizes="64x64" href="favicon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="favicon-32.png">
 <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;600;700&family=Instrument+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "SoftwareApplication",
+  "name": "AgentCanary",
+  "description": "Market intelligence API for AI agents and ClawBot. Macro regime detection, trading signals, whale alerts, and social sentiment from 250+ sources.",
+  "url": "https://agentcanary.ai",
+  "applicationCategory": "FinanceApplication",
+  "operatingSystem": "All",
+  "offers": [
+    {
+      "@type": "Offer",
+      "name": "Free Tier",
+      "price": "0",
+      "priceCurrency": "USD",
+      "description": "Basic access via Telegram bot"
+    },
+    {
+      "@type": "Offer", 
+      "name": "Builder Tier",
+      "price": "50",
+      "priceCurrency": "USD",
+      "description": "Full API access with $0.005 per call"
+    }
+  ],
+  "provider": {
+    "@type": "Organization",
+    "name": "AgentCanary",
+    "url": "https://agentcanary.ai"
+  },
+  "keywords": "market intelligence, AI agents, trading signals, macro regime, ClawBot, financial data API"
+}
+</script>
 <style>
 :root{--bg:#04070c;--bg2:#080d18;--card:#0b1120;--card-h:#0f1628;--border:#162040;--border-b:#1e2d55;--t1:#e4e9f2;--t2:#7888a8;--t3:#475272;--y:#ffc53d;--y-dim:#e6b035;--y-glow:rgba(255,197,61,.10);--y-glow-s:rgba(255,197,61,.22);--y-border:rgba(255,197,61,.20);--g:#34d399;--g-glow:rgba(52,211,153,.10);--r:#f87171;--b:#60a5fa;--p:#a78bfa;--o:#fb923c;--o-glow:rgba(251,146,60,.12);--mono:'JetBrains Mono',monospace;--sans:'Instrument Sans',-apple-system,sans-serif}
 *{margin:0;padding:0;box-sizing:border-box}
