Add OG image + twitter card image for link previews

--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
 <meta name="author" content="AgentCanary">
 <meta property="og:title" content="AgentCanary — Market Intelligence for AI Agents">
 <meta property="og:description" content="33 endpoints. 250+ data sources. 1,181 assets. The finance skill on ClawHub that can't steal from you.">
+<meta property="og:image" content="https://agentcanary.ai/og-image.png">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://agentcanary.ai">
 <link rel="canonical" href="https://agentcanary.ai/">
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="AgentCanary — Market Intelligence for AI Agents">
+<meta name="twitter:image" content="https://agentcanary.ai/og-image.png">
 <meta name="twitter:description" content="Macro regime detection, trading signals, social sentiment — for ClawBot and AI agents. Not raw data. Intelligence.">
 <link rel="icon" href="/favicon.ico" sizes="any">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
