Remove placeholder App Store link

--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@ footer{max-width:1200px;margin:0 auto;padding:32px 40px 48px;border-top:1px soli
     <div class="proof-card"><div class="proof-num">6mo</div><div class="proof-lbl">In Production</div><div class="proof-det">Live infrastructure since mid-2025. Daily active users across 20+ countries.</div></div>
     <div class="proof-card"><div class="proof-num">250+</div><div class="proof-lbl">Data Sources</div><div class="proof-det">CoinGecko, FRED, Binance, Glassnode, 200+ X/Telegram accounts, 50 newsletters.</div></div>
     <div class="proof-card"><div class="proof-num">24/7</div><div class="proof-lbl">api.agentcanary.ai</div><div class="proof-det">80+ endpoints. 33 endpoints. Join Telegram to see it live.</div></div>
-    <div class="proof-card prox"><div class="proof-num">Proximity</div><div class="proof-lbl">iOS app — same API</div><div class="proof-det">Crypto intelligence app powered by AgentCanary. 6 months daily usage, 20+ countries. <a href="https://apps.apple.com/app/PLACEHOLDER">App Store →</a></div></div>
+    <div class="proof-card prox"><div class="proof-num">Proximity</div><div class="proof-lbl">iOS app — same API</div><div class="proof-det">Crypto intelligence app powered by AgentCanary. 6 months daily usage, 20+ countries.</div></div>
   </div>
 </section>
 
